# basic-rest-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  dates_db.db  docker-compose.yml  poetry.toml  pyproject.toml
service/: main.py  models.py  settings.py
service/api/fact/: endpoint.py  filter.py  model.py
service/api/popular/: endpoint.py  model.py
service/common/: api_clients.py  exceptions.py  utils.py
service/database/: db.py
service/database/repositories/: base_repository.py  fact_repository.py  manager.py
