[tool.poetry]
name = "basic-rest-api"
version = "0.1.0"
description = ""
authors = ["Domagoj Puljic <dpuljic01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.101"
sqlalchemy = "^2.0"
uvicorn = "^0.23.2"
httpx = "^0.24.1" # async http client
pydantic = "^2.3"
pydantic-settings = "^2.0"
asyncpg = "^0.28.0"
aiosqlite = "^0.19.0"


[tool.poetry.group.dev.dependencies]
black = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
